@@ -1,3 +1,7 @@
+19 January 2017: Wouter
+	- Fix to Rename ub_callback_t to ub_callback_type, because POSIX
+	  reserves _t typedefs.
+
 12 January 2017: Wouter
 	- Fix to also block meta types 128 through to 248 with formerr. 
 	- Fix #1206: Some view-related commands are missing from 'unbound-control -h'
